--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-:root {
-    --color-red: #f00;
-}
 
 * {
     box-sizing: border-box;
@@ -65,11 +62,11 @@
     display: flex;
     align-items: center;
     padding: 0 0.4rem;
-
+    cursor: pointer;
 }
 
 .slider.dark {
-    background-color: #cccccc;
+    background-color: smokewhite;
 }
 
 .sliderKnob {
@@ -102,10 +99,11 @@
     gap: 1rem;
 }
 
-.theme img {
+.theme svg {
     flex-basis: 6%;
     flex-grow: 1;
     flex-shrink: 1;
+    cursor: pointer;
 }
 
 .themeSelect {
@@ -116,7 +114,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
-    box-shadow: 0 0 4px 1px  rgb(156, 150, 150);
+    box-shadow: 0 0 4px 1px  rgb(150, 150, 150);
     border-radius: 1rem;
 }
 
